--- a/calculator/calc.html
+++ b/calculator/calc.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Binary Calculator</title>
-        <link rel="stylesheet" href="calc.css" type="text/css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/gyanavardhana/HVA/calculator/calc.css" type="text/css">
     </head>
     <body>
         <div id="res">
@@ -18,6 +18,6 @@
             <button id="btnMul">*</button>
             <button id="btnDiv">/</button>
         </div>
-        <script src="calc.js" type="text/javascript"></script>
+        <script src="https://cdn.jsdelivr.net/gh/gyanavardhana/HVA/calculator/calc.js" type="text/javascript"></script>
     </body>
 </html>
